--- a/fooldal.html
+++ b/fooldal.html
@@ -14,6 +14,7 @@
     
     </style>
 <body><!--ez a kódnak a teste-->
+  <h1 style="text-align: center;">videójátékok</h1>
     <img src="OIP.jfif" alt="gamer" height="300" width="300">
     <a>A videójáték olyan elektronikus játék, amely a felhasználói felülettel való folyamatos kölcsönhatást foglal magában, valósidejű vizuális visszajelzést hoz létre a két- vagy háromdimenziós megjelenítő eszközön (pl. tévéképernyőn vagy számítógépes monitoron), valamint további érzékszerveinkre is hat. Az 1980-as évek óta a videójátékok a szórakoztatóipar egyre fontosabb részévé váltak, és akár tekinthetők a művészetek egyik formájának is.
 
@@ -34,7 +35,7 @@ A mai modern számítógépes játékban a játékos egyidejűleg használja a b
           </div>
 </div>
 <dl>
-    <dt>sanbox</dt>
+    <dt>sandbox</dt>
     <dd>- az amikor majdnem bármit megtudsz csinalni egy játékban</dd>
     <dt>szimulátor</dt>
     <dd>- általában az amikor egy játék szimulál egy eseményt</dd>
